--- a/assents/pages/reproductor.html
+++ b/assents/pages/reproductor.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <title>Reproductor de Streams</title>
-    <link rel="icon" href="Logo.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="styles-reproductor.css">
+    <link rel="icon" href="../img/Logo.png" type="image/x-icon"> 
+    <link rel="stylesheet" href="../styles/styles-reproductor.css">
 </head>
 <body>
 
     <div class="navbar">
         <div class="acomodar">
-            <a href="index.html"><h1 class="navbar-title">KSK-TV</h1></a>
+            <a href="../../index.html"><h1 class="navbar-title">KSK-TV</h1></a>
         </div>
     </div>
     
@@ -34,6 +34,6 @@
         <P>CUDI</P>
     </div>
 
-    <script src="scripts-reproductor.js"></script>
+    <script src="../scripts/scripts-reproductor.js"></script>
 </body>
 </html>
