--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assents/styles/styles.css">
     <title>KSK-TV</title>
-    <link rel="icon" href="Logo.png" type="image/x-icon"> 
+    <link rel="icon" href="assents/img/Logo.png" type="image/x-icon"> 
 </head>
 <body>
     <div class="navbar">
@@ -69,6 +69,6 @@
         <P>CUDI</P>
    </div>
    
-    <script src="app.js"></script>
+    <script src="/assents/scripts/app.js"></script>
 </body>
 </html>
