--- a/reproductor.html
+++ b/reproductor.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <title>Reproductor de Streams</title>
     <link rel="icon" href="../img/Logo.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="../styles/styles-reproductor.css">
+    <link rel="stylesheet" href="assents/styles/styles-reproductor.css">
 </head>
 <body>
 
@@ -34,6 +34,6 @@
         <P>CUDI</P>
     </div>
 
-    <script src="../scripts/scripts-reproductor.js"></script>
+    <script src="assents/scripts/scripts-reproductor.js"></script>
 </body>
 </html>
